--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     overflow-x: hidden;
     margin: 0;
     padding: 0;
-    background-color: #fcf3e5;
+    background-color: #b4dbdb ;
     padding-top: 100px;
 }
 
@@ -13,7 +13,7 @@ body {
     left: 0;
     width: 100%;
     z-index: 1000;
-    background-color: white;
+    background-color:  #54636c ;
     display: flex;
     justify-content: space-between;
     align-items: center;
