destacados hombre, funcionalidad a todos los botones correctamente

--- a/style.css
+++ b/style.css
@@ -175,7 +175,7 @@ body {
 }
 
 .ordenar-reloj:hover {
-    background-color: black; /* Un tono de azul más oscuro al pasar el ratón */
+    background-color: #25D366; /* Un tono de azul más oscuro al pasar el ratón */
 }
 
 .footer {
